--- a/2025/misty/compose.yaml
+++ b/2025/misty/compose.yaml
@@ -3,10 +3,10 @@ services:
     image: nginx:latest
     container_name: nginx
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/conf.d/minio.conf:ro
     ports:
       - "80:9000"
-      - "9001:9001" # 4 testing
+      - "8080:9001" # 4 testing
     depends_on:
       minio:
         condition: service_healthy
