--- a/2025/misty/nginx.conf
+++ b/2025/misty/nginx.conf
@@ -1,22 +1,38 @@
-events {}
+server {
+    listen 80;
+server_name minio.securinets-tekup.tech;
 
-http {
-    server {
-        listen 9000;
-        server_name localhost;
+# ssl_certificate /etc/nginx/ssl/;
+# ssl_certificate_key /etc/nginx/ssl/;
 
-        location / {
-            proxy_pass http://minio:9000;
-        }
+    location / {
+proxy_pass http://localhost:9000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
     }
+}
 
-    # for testing
-    server {
-        listen 9001;
-        server_name localhost;
+server {
+    listen 8080;
+server_name minio.securinets-tekup.tech;
 
-        location / {
-            proxy_pass http://minio:9001;
-        }
+# ssl_certificate /etc/nginx/ssl/;
+# ssl_certificate_key /etc/nginx/ssl/;
+
+    location / {
+proxy_pass http://localhost:9001;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 }
