--- a/2025/misty/src/Makefile
+++ b/2025/misty/src/Makefile
@@ -1,8 +1,22 @@
 
+BINARY_NAME := kryptos
+BINARY_PATH := /usr/bin/$(BINARY_NAME)
+BINARY_TEST_PATH := ./binary/$(BINARY_NAME)
+
 
 .PHONY: build
 build:
+	@go build -o $(BINARY_TEST_PATH) -v
 
-.PHONY: deploy
-deploy:
-  
+.PHONY: build-di
+build-di:
+	@docker build -t spidrx/uploo .
+
+#todo
+.PHONY: deploy-image
+deploy-image:
+	@docker login 
+
+.PHONY: install-deps
+install-deps:
+	@go mod tidy
