feat(misty): finalizied misty challenge

--- a/2025/misty/src/Makefile
+++ b/2025/misty/src/Makefile
@@ -1,5 +1,5 @@
 
-BINARY_NAME := kryptos
+BINARY_NAME := uploo
 BINARY_PATH := /usr/bin/$(BINARY_NAME)
 BINARY_TEST_PATH := ./binary/$(BINARY_NAME)
 
