--- a/2025/misty/compose.yaml
+++ b/2025/misty/compose.yaml
@@ -1,33 +1,20 @@
-services:
-  nginx:
-    image: nginx:latest
-    container_name: nginx
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/minio.conf:ro
-    ports:
-      - "80:9000"
-      - "8080:9001" # 4 testing
-    depends_on:
-      minio:
-        condition: service_healthy
-    networks:
-      - minionetwork
+version: '3.9'
 
+services:
   minio:
     image: minio/minio:latest
-    container_name: minio
+    command: server /data --address ":9000" --console-address ":9001"
+    ports:
+      - "9000:9000"
+      # - "9010:9001" #disable l8r
     environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
-    command: server /data --console-address ":9001"
+      MINIO_ROOT_USER: minioadm
+      MINIO_ROOT_PASSWORD: minio123321
+      MINIO_DOMAIN: dev-minio.tekup-securinets.tech
+      # MINIO_SERVER_URL: 
+      # MINIO_BROWSER_REDIRECT_URL: dev-minio.tekup-securinets.tech
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-    ports:
-      - "9000:9000" 
-      - "9001:9001" # 4 testing
     volumes:
       - minio-data:/data
     networks:
